# TF2DeepFloorplan

./: .deploy.py.swp  .gitignore  .isort.cfg  .pre-commit-config.yaml  CITATION.cff  Dockerfile  Evaluate_CosineSimilarity.ipynb  Jan9TroubleShooting.py  README.md  SegmentStructures.ipynb  Tensorboard.ipynb  app.py  convert2tflite.py  data.py  deepfloorplan.ipynb  deploy.py  environment.yml  infer.py  infer_notebook.ipynb  loss.py  mypy.ini  net.py  postprocess.ipynb  postprocess.py  pyproject.toml  requirements.txt  score.ipynb  scores.py  setup.cfg  setup.py  train.py  train_notebook.ipynb  train_saveBest.py
.github/workflows/: main.yml  release.yml
dfp/: _paths.py  app.py  convert2tflite.py  data.py  deploy.py  net.py  train.py
dfp/utils/: legend.py  rgb_ind_convertor.py  util.py
docs/: app.toml  game.toml  notebook.toml  pytest.md
docs/experiments/mobilenetv1/exp1/: compress.toml  deploy.toml  train.toml
docs/experiments/mobilenetv1/exp2/: compress.toml  deploy.toml  train.toml
docs/experiments/mobilenetv2/exp1/: train.toml
docs/experiments/resnet50/exp1/: train.toml
docs/experiments/vgg16/exp1/: compress.toml  compress_log.toml  deploy.toml  train.toml
docs/experiments/vgg16/exp2/: compress.toml  deploy.toml  train.toml
docs/experiments/vgg16/exp3/: compress.toml  deploy.toml  train.toml
install/: environment.yml
site/: package.json
src/dfp/: app.py  convert2tflite.py  data.py  deploy.py  loss.py  net.py  net_func.py  train.py
src/dfp/game/: __main__.py  controller.py  model.py  view.py
src/dfp/utils/: legend.py  settings.py  util.py
tests/: README.md  testNet.py  test_app.py  test_convert2tflite.py  test_data.py  test_deploy.py  test_loss.py  test_net.py  test_train.py
tests/utils/: test_legend.py  test_rgb_ind_convertor.py  test_util.py
utils/: create_tfrecord.py  legend.py  rgb_ind_convertor.py  tf_record.py  util.py
