[metadata]
name = dfp
description = Deep Floorplan (dfp)
author = Leo Leung

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    = src


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
tfcpu =
    tensorflow-cpu
    tensorboard
tfgpu =
    tensorflow-gpu==2.3.0
    tensorboard==2.3.0
tfmacm1 =
    tensorflow-metal
    tensorboard
api =
    Flask==2.1.2
    Flask-Bcrypt==0.7.1
    Flask-Classful==0.14.2
    Flask-Cors==3.0.10
    Flask-Ext==0.1
    Flask-Jsonpify==1.5.0
    Flask-Markdown==0.3
    Flask-WTF==0.14.3
dev =
    pre-commit
testing =
    pytest
    pytest-cov
    pytest-mock
    pytest-flask
linting =
    black==22.3.0
    isort==5.10.1
    flake8==4.0.1
    mypy==0.961
jupyter =
    jupyterlab
    notebook

[tool:pytest]
testpaths =
    tests
addopts =
    --cov src
    --cov-report term-missing
    --disable-warnings
    --verbose
norecursedirs =
    dist
    build
    .tox
    resources
    log
    model
    venv

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    .tox
    dist
    .eggs
    venv
    log
    model
    resources
